Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-101996

Android Qt file system fails to communicate with some content provider app (like Google Drive)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 6.2.5, 6.3.1, 6.4.0 Beta1
    • 6.2.0, 6.3
    • Core: I/O
    • None
    • Android
    • 1fefff6d1f (qt/qtbase/dev) 1fefff6d1f (qt/tqtc-qtbase/dev) eff8c4d529 (qt/qtbase/6.3) eff8c4d529 (qt/tqtc-qtbase/6.3) 46696eaf1c (qt/qtbase/6.2) 46696eaf1c (qt/tqtc-qtbase/6.2)

    Description

      Opening a file from a content:// uri like Google Drive results in an error while IO operations take place:

      W ParcelFileDescriptor: Peer expected signal when closed; unable to deliver after detach
      

      This is caused by the fact that Qt detaches fd handle from the ParcelFileDescriptor and discards the instance while keeping the handle. This does not work services, which expect the ParcelFileDescriptor to remain alive.

      This is also described at the docs:

      You should not detach when the original creator of the descriptor is expecting a reliable signal through close() or closeWithError(java.lang.String).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jakoivik Jarkko Koivikko
            jakoivik Jarkko Koivikko
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes