Android: Keep the ParcelFileDescriptor open for content uris

Detaching fd and closing the ParcelFileDescriptor prevents IO with the
services like Google Drive on Android.

Instead, the file system should keep the ParcelFileDescriptor open while
the IO operations take place and close it manually. Also, prevent Qt
from closing the handle for us.

Fixes: QTBUG-101996
Change-Id: Ie54c04ad5aa1e7ee5444a04c30ac1323f73047bb
Reviewed-by: Assam Boudjelthia <assam.boudjelthia@qt.io>
(cherry picked from commit 1fefff6d1f99dbcf1a453424753ad5562fb675ef)
Reviewed-by: Jarkko Koivikko <jarkko.koivikko@code-q.fi>